--- a/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/add-user-page.html
+++ b/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/add-user-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add user</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <style>
         div.row{
             margin-bottom: 10px;
