--- a/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/add-pet-page.html
+++ b/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/add-pet-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add pet</title>
-    <link href="./style/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
             <label for="breeed-input">Breed:</label>
             <input id="breeed-input" name="breed" type="text" value="" width="200"/>
         </div>
-        <div class="row" style="margin-top: 10px">
+        <div class="row">
             <button type="submit" name="OK">Add</button>
         </div>
     </form>
