--- a/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/edit-pet-page.html
+++ b/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/edit-pet-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit pet</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <style>
         div.row{
             margin-bottom: 10px;
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-<form id="add-user-post" th:action="@{/pet/{id}/edit(id=${pet.id_pet})}" th:method="post" action="edit-pet-page.html">
+<form id="add-user-post" th:action="@{/pet/edit}" th:method="post" action="edit-pet-page.html">
     <h1>Edit pet</h1>
     <div class="row">
         <label for="id-input">ID:</label>
