--- a/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/users-page.html
+++ b/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/users-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
 <h1>Users</h1>
