--- a/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/pets-page.html
+++ b/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/pets-page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pets</title>
+    <link type="text/css" rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
     <h3>Pets breeds:</h3>
