--- a/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/users-page.html
+++ b/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/templates/users-page.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link type="text/css" rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 <h1>Users</h1>
-<table border="1">
+<table>
     <tr>
         <th>ID</th>
         <th>FIO</th>
@@ -28,13 +28,13 @@
         <td th:text="${user.emailDto.password}">password</td>
         <td th:text="${user.petDto.breed}">breed</td>
         <td>
-            <a href="edit-user-page.html" th:href="@{/user/{id}/edit(id=${user.getId_user})}" style="text-decoration:none">
+            <a href="edit-user-page.html" th:href="@{/user/{id}/edit(id=${user.getId_user})}">
                 <button type="button">Edit user</button>
             </a>
         </td>
 
         <td>
-            <a href="delete-user-page.html" th:href="@{/user/{id}/delete(id=${user.getId_user})}" style="text-decoration:none">
+            <a href="delete-user-page.html" th:href="@{/user/{id}/delete(id=${user.getId_user})}">
                 <button type="button">Delete user</button>
             </a>
         </td>
@@ -42,14 +42,10 @@
 
 </table>
 
-<tr>
-    <td>
-        <a href="add-user-page.html" th:href="@{/user/add}" style="text-decoration:none">
-            <button type="button" style="margin-top: 20px">Add user</button>
-        </a>
-    </td>
-</tr>
-
-
+<div class="row">
+    <a href="add-user-page.html" th:href="@{/user/add}">
+        <button type="button">Add user</button>
+    </a>
+</div>
 </body>
 </html>
