--- a/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/static/css/style.css
+++ b/spring-mvc/HW/spring-boot-data-jpa-hw/src/main/resources/static/css/style.css
@@ -1,3 +1,12 @@
 div.row{
-    margin-bottom: 10px;
+    margin-top: 10px;
+}
+input.text{
+    width: 200px;
+}
+a.button{
+    text-decoration: none;
+}
+table, th, td{
+    border: 1px solid black;
 }
